@@ -1,21 +1,31 @@
 package com.example.calenderproject.service;
 
 
-import com.example.calenderproject.dto.*;
+import com.example.calenderproject.dto.request.CreateScheduleRequest;
+import com.example.calenderproject.dto.request.DeleteScheduleRequest;
+import com.example.calenderproject.dto.request.UpdateScheduleRequest;
+import com.example.calenderproject.dto.response.CreateScheduleResponse;
+import com.example.calenderproject.dto.response.GetCommentsResponse;
+import com.example.calenderproject.dto.response.GetScheduleResponse;
+import com.example.calenderproject.dto.response.UpdateScheduleResponse;
 import com.example.calenderproject.entity.Schedule;
+import com.example.calenderproject.repository.CommentRepository;
 import com.example.calenderproject.repository.ScheduleRepository;
 import lombok.RequiredArgsConstructor;
+import org.hibernate.annotations.Comments;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class ScheduleService {
     public final ScheduleRepository scheduleRepository;
+    public final CommentRepository commentRepository;
 
     @Transactional
     public CreateScheduleResponse save(CreateScheduleRequest request) {
@@ -32,7 +42,9 @@ public class ScheduleService {
                 scheduleSave.getId(),
                 scheduleSave.getTitle(),
                 scheduleSave.getContent(),
-                scheduleSave.getName()
+                scheduleSave.getName(),
+                scheduleSave.getCreatedAt(),
+                scheduleSave.getModifiedAt()
 
         );
     }
@@ -44,7 +56,7 @@ public class ScheduleService {
         if (name != null && !name.isEmpty()) {
             schedules = schedules.stream()
                     .filter(schedule -> schedule.getName().equals(name))
-                    .toList();
+                    .collect(Collectors.toList());
         }
 
         schedules.sort(Comparator.comparing(Schedule::getModifiedAt).reversed());
@@ -55,7 +67,9 @@ public class ScheduleService {
                     schedule.getId(),
                     schedule.getTitle(),
                     schedule.getContent(),
-                    schedule.getName()
+                    schedule.getName(),
+                    schedule.getCreatedAt(),
+                    schedule.getModifiedAt()
 
             );
             dtos.add(dto);
@@ -68,11 +82,15 @@ public class ScheduleService {
         Schedule schedule = scheduleRepository.findById(scheduleId).orElseThrow(
                 () -> new IllegalArgumentException("잘못된 접근입니다.")
         );
+
+
         return new GetScheduleResponse(
                 schedule.getId(),
                 schedule.getTitle(),
                 schedule.getContent(),
-                schedule.getName()
+                schedule.getName(),
+                schedule.getCreatedAt(),
+                schedule.getModifiedAt()
         );
     }
 
@@ -84,8 +102,8 @@ public class ScheduleService {
 
         if (request.getPassword().equals(schedule.getPassword())) {
             schedule.updateSchedule(
-                    request.getName(),
-                    request.getTitle()
+                    request.getTitle(),
+                    request.getName()
             );
         } else {
             throw new IllegalArgumentException("비빌번호가 잘못됐습니다.");
@@ -94,7 +112,9 @@ public class ScheduleService {
         return new UpdateScheduleResponse(
                 schedule.getId(),
                 schedule.getTitle(),
-                schedule.getName()
+                schedule.getName(),
+                schedule.getCreatedAt(),
+                schedule.getModifiedAt()
         );
     }
 
@@ -104,7 +124,7 @@ public class ScheduleService {
                 () -> new IllegalArgumentException("잘못된 접근입니다.")
         );
 
-        if (request.getPassword().equals(schedule.getPassword())) {
+        if (!request.getPassword().equals(schedule.getPassword())) {
             throw new IllegalArgumentException("비빌번호가 틀렸습니다.");
         }
 
